--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    /* outline: 2px solid red; */
+    outline: 2px solid red;
     box-sizing: border-box;
 }
 
@@ -42,7 +42,7 @@ button, input[type="submit"], input[type="reset"] {
 }
 
 .input-container > label {
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .adding-section-container {
@@ -58,9 +58,54 @@ button, input[type="submit"], input[type="reset"] {
 }
 
 .button {
-    font-weight: 500;
+    font-weight: 600;
     padding: .3rem 1.6rem;
     border-radius: 8px;
     border: 1px solid black;
     font-size: .9rem;
+}
+
+.books-display {
+    width: 60vw;
+    margin-top: 1.5rem;
+}
+
+.books-display > div {
+    border-bottom: 1px solid black;
+}
+
+.name-header {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.name-header > p {
+    font-weight: 600;
+    margin-right: 12rem;
+}
+
+.name-cards {
+    width: 20%;
+}
+
+.name-cards > p {
+    font-weight: 600;
+}
+
+.book-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.book-information {
+    width: 20%;
+}
+
+.delete-button-container {
+    width: 20%;
+    display: flex;
+    justify-items: center;
+    align-items: center;
 }
